--- a/.travis.yml
+++ b/.travis.yml
@@ -12,38 +12,34 @@ matrix:
     - env: PYTHON_VERSION="3.5" NUMPY_VERSION="1.13.1" SCIPY_VERSION="0.19.1"
            SKLEARN_VERSION="0.19.1"
     - env: PYTHON_VERSION="3.6" NUMPY_VERSION="1.13.1" SCIPY_VERSION="0.19.1"
-           SKLEARN_VERSION="0.20.3"
+           SKLEARN_VERSION="0.19.1"
     - env: PYTHON_VERSION="3.7" NUMPY_VERSION="*" SCIPY_VERSION="*"
            SKLEARN_VERSION="*"
-    - env: PYTHON_VERSION="3.7" NUMPY_VERSION="*" SCIPY_VERSION="*"
-           SKLEARN_VERSION="nightly"
 
-install:
+before_install:
   # install miniconda
   - deactivate
   - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
   - MINICONDA_PATH=/home/travis/miniconda
   - chmod +x miniconda.sh && ./miniconda.sh -b -p $MINICONDA_PATH
   - export PATH=$MINICONDA_PATH/bin:$PATH
-  - conda update --yes conda
+  - conda update --yes --quiet conda
   # create the testing environment
-  - conda create -n testenv --yes python=$PYTHON_VERSION pip
-  - source activate testenv
-  - |
-      if [ $SKLEARN_VERSION = "nightly" ]; then
-          conda install --yes numpy==$NUMPY_VERSION scipy==$SCIPY_VERSION cython nose pytest pytest-cov
-          # install nightly wheels
-          pip install --pre -f https://sklearn-nightly.scdn8.secure.raxcdn.com scikit-learn
-      else
-          conda install --yes numpy==$NUMPY_VERSION scipy==$SCIPY_VERSION scikit-learn==$SKLEARN_VERSION cython nose pytest pytest-cov
-      fi
+  - conda env create --file environment.yml python=${PYTHON_VERSION}
+  - source activate mutar-env
+  - conda install --yes --quiet pytest pytest-cov coverage
+  - pip install flake8 check-manifest
   - pip install codecov
-  - pip install .
+
+install:
+  - python setup.py build_ext --inplace
+  - pip install -e .
 
 script:
-  - mkdir for_test
-  - cd for_test
-  - pytest -v --cov=mutar --pyargs mutar
-
+  - export NUMBA_DISABLE_JIT=1
+  - pytest -lv --cov-report term-missing mutar --cov=mutar --cov-config .coveragerc
+  - make
+  - flake8 --count mutar
 after_success:
-  - codecov
+  - cp .coverage $TRAVIS_BUILD_DIR
+  - codecov --root $TRAVIS_BUILD_DIR || echo "codecov upload failed"
