--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,7 @@ environment:
   matrix:
     - PYTHON: "C:\\Miniconda3-x64"
       PYTHON_VERSION: "3.5.x"
-      PYTHON_ARCH: "32"
+      PYTHON_ARCH: "64"
       NUMPY_VERSION: "1.13.1"
       SCIPY_VERSION: "0.19.1"
       SKLEARN_VERSION: "0.19.1"
@@ -22,16 +22,17 @@ install:
   # https://github.com/conda/conda/issues/1753
   - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PYTHON%\\Library\\bin;%PATH%"
   # install the dependencies
-  - "conda install --yes pip numpy==%NUMPY_VERSION% scipy==%SCIPY_VERSION% scikit-learn==%SKLEARN_VERSION% nose pytest pytest-cov"
-  - pip install codecov
-  - pip install .
+  - conda env create --file environment.yml python=${PYTHON_VERSION}
+  - activate mutar-env
+  - conda install pip
+  - pip install codecov pytest pytest-cov
+  - python setup.py build_ext --inplace
+  - pip install -e .
 
 test_script:
-  - mkdir for_test
-  - cd for_test
   - pytest -v --cov=mutar --pyargs mutar
 
 after_test:
-  - cp .coverage %APPVEYOR_BUILD_FOLDER%
-  - cd %APPVEYOR_BUILD_FOLDER%
-  - codecov
+  # - cp .coverage %APPVEYOR_BUILD_FOLDER%
+  # - cd %APPVEYOR_BUILD_FOLDER%
+  # - codecov
