--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,16 +22,17 @@ install:
   # https://github.com/conda/conda/issues/1753
   - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PYTHON%\\Library\\bin;%PATH%"
   # install the dependencies
-  - "conda install --yes pip numpy==%NUMPY_VERSION% scipy==%SCIPY_VERSION% scikit-learn==%SKLEARN_VERSION% nose pytest pytest-cov"
-  - pip install codecov
-  - pip install .
+  - conda env create --file environment.yml python=${PYTHON_VERSION}
+  - activate mutar-env
+  - conda install pip
+  - pip install codecov pytest pytest-cov
+  - python setup.py build_ext --inplace
+  - pip install -e .
 
 test_script:
-  - mkdir for_test
-  - cd for_test
-  - pytest -v --cov=mutar --pyargs mutar
+  - pytest -v --cov=mtw --pyargs mtw
 
 after_test:
-  - cp .coverage %APPVEYOR_BUILD_FOLDER%
-  - cd %APPVEYOR_BUILD_FOLDER%
-  - codecov
+  # - cp .coverage %APPVEYOR_BUILD_FOLDER%
+  # - cd %APPVEYOR_BUILD_FOLDER%
+  # - codecov
