--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,7 @@ environment:
   matrix:
     - PYTHON: "C:\\Miniconda3-x64"
       PYTHON_VERSION: "3.5.x"
-      PYTHON_ARCH: "32"
+      PYTHON_ARCH: "64"
       NUMPY_VERSION: "1.13.1"
       SCIPY_VERSION: "0.19.1"
       SKLEARN_VERSION: "0.19.1"
@@ -30,7 +30,7 @@ install:
   - pip install -e .
 
 test_script:
-  - pytest -v --cov=mtw --pyargs mtw
+  - pytest -v --cov=mutar --pyargs mutar
 
 after_test:
   # - cp .coverage %APPVEYOR_BUILD_FOLDER%
