--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,7 @@ install:
   - pip install -e .
 
 script:
+  - export NUMBA_DISABLE_JIT=1
   - pytest -lv --cov-report term-missing mutar --cov=mutar --cov-config .coveragerc
   - make
   - flake8 --count mutar
