--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
             conda env create --file environment.yml python=3
             source activate mutar-env
             conda install --yes pip matplotlib sphinx sphinx_rtd_theme numpydoc pillow
-            pip install sphinx-gallery
+            pip install sphinx-gallery sphinx_bootstrap_theme
             pip install .
             cd docs
             make html
